@@ -27,7 +27,7 @@
 
 <schema name="test" version="1.2">
 
-  <fieldType name="integer" class="solr.TrieIntField" precisionStep="0"/>
+  <fieldType name="integer" class="${solr.tests.IntegerFieldType}" docValues="${solr.tests.numeric.dv}" precisionStep="0"/>
   <fieldType name="string" class="solr.StrField" sortMissingLast="true"/>
 
   <field name="id" type="string" indexed="true" stored="true" multiValued="false" required="false"/>
