@@ -19,7 +19,7 @@
 <schema name="example core one" version="1.1">
 
    <fieldtype name="string"  class="solr.StrField" sortMissingLast="true" omitNorms="true"/>
-   <fieldType name="long" class="solr.TrieLongField" precisionStep="0" positionIncrementGap="0"/>
+   <fieldType name="long" class="${solr.tests.LongFieldType}" docValues="${solr.tests.numeric.dv}" precisionStep="0" positionIncrementGap="0"/>
 
   <!-- general -->
   <field name="id"        type="string"    indexed="true"  stored="true"  multiValued="false" required="true"/>
